[package]
name = "tracing-problems-repro"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.1", features = ["rt-multi-thread", "full", "tracing"] }

# Removing the "spantrace" feature makes the application run.
# error-stack = { version = "0.2.4" }
error-stack = { version = "0.2.4", features = ["spantrace"] }

tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.18.0"
tonic = "0.8.3"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-otlp = "0.11.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
console-subscriber = { git = "https://github.com/tokio-rs/console/", rev = "70fc2c5d694b76499a68eca271ce4e337a313cfd"}

