[package]
name = "tracing-problems-repro"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.23.1", features = ["rt-multi-thread", "full", "tracing"] }

tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
tonic = "0.8.3"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"]}
opentelemetry-otlp = "0.12.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
